2015-06-16  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR2439: NSS PKCS11 regression - due to java.security
	automatic loading
	* NEWS: Updated.

2012-11-07  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* nss.cfg.in: Set handleStartupErrors
	to ignoreMultipleInitialisation so that our
	PKCS11 provider configuration is silently
	dropped if the user has already configured it.

2015-06-16  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR2434: SystemTap support is no longer optional
	* Makefile.am:
	(install-exec-local): Make tapset installation
	conditional on ENABLE_SYSTEMTAP to match
	creation in icedtea target.
	* NEWS: Updated.

2012-11-07  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* INSTALL: Update SystemTap documentation.
	* README: Update SystemTap documentation.
	* configure.ac:
	Remove --enable-systemtap option.  Only
	issue a warning and not set
	ENABLE_SYSTEMTAP if sdt.h is not found
	or is outdated.

2015-06-03  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	PR2433: ppc64le does not support -Xshare:dump
	* Makefile.am:
	(add-archive): Exclude ppc64le as well as ppc64.
	(add-archive-debug): Likewise.
	(add-archive-boot): Likewise.
	* NEWS: Updated.

2014-05-13  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	PR2432: ppc64 JIT doesn't support class data sharing
	* Makefile.am:
	(add-archive): Skip on ppc64.
	(add-archive-debug): Likewise.
	(add-archive-boot): Likewise.
	* NEWS: Updated.

2015-06-16  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR2429: OpenJDK build does not copy a symlinked
	cacerts file
	* Makefile.am:
	(JDK_CACERTS_FILE): Added to specify the location
	of cacerts within the bootstrap JDK.
	(CACERTS_FILE): Find the regular cacerts file,
	dereferencing any symlinks which point to it.
	(ICEDTEA_CONFIGURE): Pass the deferenced CACERTS_FILE
	to OpenJDK's configure, rather than the JDK path.
	* NEWS: Updated.
	* configure.ac:
	Call IT_FIND_TOOL to locate the readlink tool,
	which is part of coreutils.
